css/site.css
:root{
    scroll-behavior: smooth;
    height: 100%;
    --cursor-flicker: flick 0.7s infinite;
    --main-dark:rgb(10,10,15);
    --light-bg:orange;
    --dark-badge:rebeccapurple;
    --light-badge:rgb(10,10,15);
    --dark-accent:rebeccapurple;
    --text-light:white;
    --text-dark:black;
    --light-blob:orange;
    --dark-blob: rgb(10,10,10);
    --light-grid: 76px 76px,76px 76px;
    --dark-grid: 100px 100px,100px 100px;
}



@font-face {
    font-family: 'Quicksand Book';
    src: url('../fonts/QuicksandBook-Regular.woff2') format('woff2'),
        url('../fonts/QuicksandBook-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}


body{
    background-color: var(--light-bg);
    position: relative;
    z-index: -3;
    background-attachment:fixed;
    background-image:linear-gradient(to bottom,transparent 99%,#1f0f2e),linear-gradient(to right, transparent 99%,#1f0f2e 100%); 
    background-size:var(--light-grid)
}


section{
    min-height: 100vh;
    max-width: 105ch;
    width: 100%;
    margin: auto;
    padding: 40px;
    display: flex;
    gap: 30px;
}

p{
    font-family: "Quicksand Book";
}

nav{
    position: fixed;
    height: min-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    transition: 0.2s;
    padding: 5px 15px;
    gap: 15px;
    width: 100%;
    z-index: 1;
    background:whitesmoke;
}
    
.nav-link{
    padding:5px;
    border: none;
    background-color: transparent;
    text-transform: lowercase;
    color: var(--text-dark);
    font-size: 1.3rem;
    font-weight: bold;
    font-family: 'Quicksand Book' ;
    text-align: start;
    }

.nav-link:hover::before{
    content: "go to ";
    color: red;
    font-family: Arial;
}

.nav-link:hover::after{
    content: "|";
    animation: var(--cursor-flicker) ;
}

.underscore::before{
    content: "_";
    color: #ff3701;
}

nav > a:not(.active){
    display: none;
}

nav > .active::before{
    content: "● " !important;
    color: #ff3701 !important;
}

nav:hover{
    a{
        display: block;
    }
    height:auto;
}

.badge{
    font-family: Arial;
    color: white;
    text-transform: lowercase;
    font-weight: bold;
    padding: 10px;
    background-color: var(--light-badge);
    width: max-content;
    margin: 15px 0px;
}

.prompt::before{
    content: "$";
}

.flicker::after{
    content: "|";
    animation: var(--cursor-flicker);
}

#hero{
    flex-direction: column;
    justify-content: center;
}

#hero > h1.badge{
    width: 100%;
    transform: rotate(-1deg);
}

#hero > a{
    transition: 0.1s;
}

#hero > a.badge:hover{
    background-color: whitesmoke;
    color: black;
    filter: drop-shadow(5px 5px 0px black);
}

#work{
    flex-direction: column;
}

.display{
    display: grid;
    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
    gap: 30px;
}

.card{
    transition: 0.2s;
    background-color: whitesmoke;
    filter: drop-shadow(7px 7px 0px black);
}

.card > img{
    width: 100%;
}

.card-body {
    display: flex;
    flex-direction: column;
    gap: 30px;
    padding: 15px;
}

.title.badge{
    text-transform: uppercase;
}

.made{
    margin-top: auto;
}

.made > ul {
    display: flex;
    gap: 5px;
    flex-wrap: wrap;
}

.card:hover{
    filter: none;
}

#contact{
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

#stack{
    max-width: none;
    width: 100% !important; /*Override section max-width property*/
    background-color: #ff3701;
    background-image: url(../filters/b3.svg);
    background-repeat: repeat-y;
    background-attachment: fixed;
}

#stack > div{
    margin-top: 10px;
    width: 105ch;
    background-color: whitesmoke;
    filter: drop-shadow(8px 8px 0px #3f5ef4);
    margin: auto;
    padding: 10px;
}

#stack > div > div {
    margin-top: 10px;
}

#stack ul{
    display: grid;
    gap: 30px;
    grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
}

#stack ul li{
    border-bottom: 1px solid ;
    color: #ff3701;
    border-bottom: 3px solid #ff3701;
    padding: 10px;
    font-family: "Quicksand Book";
    font-weight: bold;
    font-size: 1.3rem;
}

.contact-items{
    display: flex;
    gap: 20px;
    margin: 10px 0px;
}

.contact-items i{
    font-size: 1.5rem;
    color: var(--text-dark);
}

.contact-items i:hover{
    font-size: 1.5rem;
    filter: drop-shadow(0px 0px 10px blue);
    color: blueviolet;
}


.blob-filter{
    filter: url("#goo");
    position: absolute;
    z-index: -1;
    width: 100%;
    top: 0;
    bottom: 0;
    height: 250vh;
    overflow: hidden; /*AVOID BLOBS STRETCHIN THE VIEWPORT*/
}

.lamp{
    filter: blur(40px);
}

.blob {
    position: absolute;
    top: 0;
    left: 0;
    fill: var(--light-blob);
    width: 50vmax;
    z-index: -1;
    animation: move 40s ease-in-out infinite;
    transform-origin: 50% 50%;
    filter: drop-shadow(0px 0px 50px rebeccapurple);
  }

  .blob svg{
    transform: scale(1.3);
}

  .blob-2 {
    position: absolute;
    top: 0;
    left: 0;
    fill: var(--light-blob);
    width: 10vmax;
    z-index: -1;
    animation:  move 60s ease-in-out infinite ;
    transform-origin: 50% 50%;
    filter: drop-shadow(0px 0px 40px rebeccapurple);
}

@keyframes move {
    0%   { transform: scale(1)   translate(10px, -30px); }
    38%  { transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
    40%  { transform: scale(0.8, 1) translate(80vw, 30vh) rotate(160deg); }
    78%  { transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
    80%  { transform: scale(1.3) translate(0vw, 50vh) rotate(-20deg); }
    100% { transform: scale(1)   translate(10px, -30px); }
}

@keyframes flick{
    0%{opacity: 0;}
    25%{opacity: 0;}
    50%{opacity: 0;}
    75%{opacity: 1;}
    100%{opacity: 1;}
}

